Changelog
=========

1.2.8 (unreleased)
------------------

- style fixes for new style of portlet manager buttons
  [vangheem]


1.2.7 (2012-08-11)
------------------
- fixes: Display menu falls under footer (see Events page) (IE7) 
  [maartenkling]

- fixes: Live search appears under content action menu (IE7)
  [maartenkling]

- style ol/li in statictext portlet having omit border true
  [maartenkling]

- Fixes: in overlays, and especially in reference browser,
  label in an anchor link has a cursor pointer.
  Improves navigation experience in reference browser widget.
  [thomasdesvenain]

- Fixes: compare previous link margin with history records
  is smaller.
  [thomasdesvenain]

- Fixes and improvements on history popup with diff.
  [thomasdesvenain]

- Move new CSS class generation into new function called ``getColumnClasses``
  to let the old and deprecated one return column content CSS class only. This
  is important to keep all previously customized main_templates working.
  [saily]


1.2.6 (2012-06-29)
------------------

- Use sunburst_view to generate portal-column-one and portal-column-two
  classes as it is already done for portal-column-content.
  Fixes: https://dev.plone.org/ticket/12995
  [saily]


1.2.5 (2012-05-25)
------------------
- For event view template, changed headerless table to headings and divs for better accessibility. See bug #13181
  [hmharter]

- define class .breadcrumbSeparator, which is referred to in plone.app.layout
  and plone.app.search, but wasn't in Sunburst. Set a color on it, because
  the separator character was changed (see https://dev.plone.org/ticket/12904)
  The color chosen is WCAG2.0 compliant in contrast.
  [polyester]

- Set "display: block; font-weight:normal" on .formHelp in forms.css.dtml to
  assure that field help displays well even if it is formatted as a span
  inside the label for accessibility.
  [smcmahon]

- Change form tab style selectors from '#content' to '#content-core' so form