@@ -2278,4 +2278,15 @@ a.historyComparePrevious span {
 #noTagsSelected, #oneOrMoreTagsSelected {
     display: none;
 }
+#ajax-spinner {
+    display:none;
+    width: 20px;
+    height: 20px;
+    position: fixed;
+    background-position: center center;
+    top: 50%;
+    left: 50%;
+    margin-top: -10px;
+    margin-left: -10px;
+}
 /* @end */
